added work from lilin; added some css change

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ Licence URI: http://www.os-templates.com/template-terms
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link href="layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
+
 </head>
 <body id="top">
 <!-- ################################################################################################ -->
@@ -48,8 +49,7 @@ Licence URI: http://www.os-templates.com/template-terms
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <div class="wrapper row1">
-  <header id="header" class="clear"> 
-    <!-- ################################################################################################ -->
+  <header id="header" class="clear"><!-- ################################################################################################ -->
     <div id="logo" class="fl_left">
       <img src="layout/images/fpe-small.jpg" width="20" height="20" alt="fpe Logo"  />
       <!--<h1><a href="index.html">Free Progress Education</a></h1>-->
@@ -113,7 +113,11 @@ Licence URI: http://www.os-templates.com/template-terms
         <li><a href="#">Contact</a></li>
       </ul>
     </nav>
-    <!-- ################################################################################################ -->
+  <!-- ################################################################################################ -->
+  <div id="apDiv1">
+    <p>&nbsp;</p>
+    <p><span class="logo_title">Free Progress Education</span></p>
+  </div>
   </header>
 </div>
 <!-- ################################################################################################ -->
@@ -139,7 +143,8 @@ Licence URI: http://www.os-templates.com/template-terms
         <ul class="nospace">
           <li><u>What is Free Progress University?</u></li>
           <li>- Community </li>
-          <li>- A Platform</li>
+          <li>
+        - A Platform</li>
           <li>- A liberated process</li>
           <li>- System without authority</li>
         </ul>
@@ -291,9 +296,9 @@ Licence URI: http://www.os-templates.com/template-terms
           <!--<address>
           <span class="fa fa-map-marker"></span> Street Name &amp; Number, Town, Postcode/Zip
           </address>-->
-        </li>
+   
         <!--<li class="btmspace-10"><span class="fa fa-phone"></span> +00 (123) 456 7890</li>-->
-        <li><span class="fa fa-envelope-o"></span> freeprogresse@gmail.com</li>
+        <li><img src="layout/images/Email.jpg" id="email_image"></li>
       </ul>
     </div>
     <div class="one_quarter">
