--- a/header.html
+++ b/header.html
@@ -19,8 +19,10 @@
           <ul> 
             <li><a href="../physics/intro_fpu.html">Intro FPU</a></li>
             <li><a href="../physics/why_phy.html">Why Physics?</a></li>
-            <li><a href="../physics/learn_proc.html">Struture of Course</a></li>
-            <li><a href="../physics/intro_curri.html">Proposed Curriculum</a></li>
+            <li><a href="../physics/learn_proc.html">Learning process</a></li>            
+            <li><a href="../physics/intro_curri.html">Curriculum approach</a></li>
+            <li><a href="../physics/foreword_FPU_physics.html">Foreword to the faculty</a></li>
+            <li><a href="../physics/proposed_courses.html">Proposed courses</a></li>
             <li><a href="#">Apply</a></li>
           </ul>
         </li> 
