change background for main content

--- a/physics/intro_fpe_long.html
+++ b/physics/intro_fpe_long.html
@@ -8,7 +8,7 @@
 <body>  
   <div w3-include-html="../header.html"></div> 
   <div id="main_content">
-    <div w3-include-html="articles/intro_fpe_long.html"></div> 
+    <div w3-include-html="articles/intro_fpe_long.html" id="content_body"></div> 
   </div>
   <div w3-include-html="../footer.html"></div> 
   <script>
