--- a/physics/learn_proc.html
+++ b/physics/learn_proc.html
@@ -8,7 +8,7 @@
 <body>  
   <div w3-include-html="../header.html"></div> 
   <div id="main_content">
-    <div w3-include-html="articles/learn_proc.html"></div> 
+    <div w3-include-html="articles/learn_proc.html" id="content_body"></div> 
   </div>
   <div w3-include-html="../footer.html"></div> 
   <script>
